# core-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
changelog.d/: 20251227_100_coverage.md  20251227_173319_add_cicd_pipeline.md  20251227_183811_migrate_to_stable_rust.md  20251227_232300_mjs_scripts_and_changeset_support.md  README.md
rust/: Cargo.toml
rust/src/: constants.rs  converters.rs  flow.rs  hybrid.rs  lib.rs  link_type.rs  links.rs  point.rs  query.rs
rust/tests/: hybrid.rs  point.rs  query.rs
scripts/: bump_version.py  check_file_size.py  collect_changelog.py  create_github_release.py  version_and_commit.py
src/: constants.rs  converters.rs  flow.rs  hybrid.rs  lib.rs  link_type.rs  links.rs  point.rs  query.rs
tests/: constants.rs  flow.rs  hybrid.rs  point.rs  query.rs
