[package]
name = "platform-data"
version = "0.1.0-aplha.0"
edition = "2018"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/platform-rs"
homepage = "https://github.com/linksplatform/platform-rs"
description = """
Data for linksplatform
"""

[dependencies]
memmap2 = "0.5.0"
tempfile = "3.2.0"
num-traits = "0.2.14"

platform-num = { version = "0.1.0-aplha.0" }
platform-mem = { version = "0.1.0-aplha.4" }
platform-treesmethods = { version = "0.1.0-aplha.0" }
